<resources>
    <string name="app_name">Gallery Pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="navigation_drawer_header_title">Gallery</string>
    <string name="nav_header_photos">Photos</string>
    <string name="nav_header_videos">Videos</string>
    <string name="nav_header_albums">Albums</string>
    <string name="nav_home">Home</string>
    <string name="nav_albums">Album</string>
    <string name="nav_times">Timeline</string>
    <string name="nav_rate">Rate 5 star</string>
    <string name="nav_video">Video</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="action_mode">Mode</string>
    <string name="action_sort">Sort</string>
    <string name="lo_grid">Grid</string>
    <string name="lo_list">List</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="hello_album_fragment">Hello album fragment</string>
    <string name="item_search_main">Search</string>
    <string name="item_camera_main">Camera</string>
    <string name="item_style_main">Style</string>
    <string name="sub_item_style_main_default">Default</string>
    <string name="sub_item_style_main_grid">Grid</string>
    <string name="sub_item_style_main_list">List</string>
    <string name="item_sort_main">Sort</string>
    <string name="sub_item_sort_main_name">By name</string>
    <string name="sub_item_sort_main_date">By date</string>
    <string name="item_create_main">Create</string>
    <string name="app_light_description">A colorful material gallery.</string>
    <string name="team_name">HoraApps</string>
    <string name="welcome_slide_title">Welcome To LeafPic!</string>
    <string name="welcome_slide_sub">A Colorful Material Designed Gallery!</string>
    <string name="made_with_love_by">Made with love by</string>
    <string name="donald_role">Project Manager</string>
    <string name="gilbert_role">Major Designer</string>
    <string name="emoji_easter_egg">¯\\_(ツ)_/¯</string>
    <string name="easter_egg_enable">Enabled Easter Egg: </string>
    <string name="easter_egg_disable">Disabled Easter Egg: </string>
    <string name="fp_not_supported">Sorry, fingerprint authentication not supported.</string>
    <string name="fp_not_configured">No fingerprint configured.</string>
    <string name="fp_not_enabled_sls">Secure lock screen not enabled.</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="ten_dp">Delete</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="ok_action">OK</string>
    <string name="rename_photo_action">Rename photo</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="refresh">Refresh</string>
    <string name="sent_to_action">Send to</string>
    <string name="show_full">Show full</string>
    <string name="filter_menu_title">Filter</string>
    <string name="all">All</string>
    <string name="videos">Video</string>
    <string name="images">Images</string>
    <string name="gifs">Gifs</string>
    <string name="sort_menu_title">Sort</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="date_taken">Date taken</string>
    <string name="last_modified">Last modified</string>
    <string name="delete_error">Unable to delete this file</string>
    <string name="rename_error">Unable to rename this file</string>
    <string name="move_error">Unable to move this file</string>
    <string name="copy_error">Unable to copy this file</string>
    <string name="size">Size</string>
    <string name="numeric">As number</string>
    <string name="ascending">Ascending</string>
    <string name="select_all">Select All</string>
    <string name="clear_selected">Clear Selected</string>
    <string name="share">Share</string>
    <string name="rotate">Rotate</string>
    <string name="rotate_right_90">Rotate right 90°</string>
    <string name="rotate_left_90">Rotate left 90°</string>
    <string name="rotate_180">Rotate 180°</string>
    <string name="copy_to">Copy to</string>
    <string name="move_to">Move to</string>
    <string name="use_as">Use as</string>
    <string name="edit">Edit</string>
    <string name="fix_date">Fix date</string>
    <string name="rename">Rename</string>
    <string name="filter_data">Filter</string>
    <string name="change_column">Change column</string>
    <string name="increase_column_count">Increase column count</string>
    <string name="reduce_column_count">Reduce column count</string>
    <string name="view_mode">View mode</string>
    <string name="rename_album">Rename album</string>
    <string name="details">Details</string>
    <string name="more">More</string>
    <string name="show_more">Show More</string>
    <string name="edit_with">Edit with</string>
    <string name="open_with">Open with</string>
    <string name="upload">Upload</string>
    <string name="set_preview">Set as preview</string>
    <string name="clear_preview">Clear preview</string>
    <string name="new_folder">New Folder</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="view">View</string>
    <string name="hide_album_message">
        Hiding this album will create a .nomedia file in the folder
and this could make the media inaccessible from other apps. Use the exclude option to avoid this.
    </string>
    <string name="delete_album_message">Are you sure you want to delete this album?</string>
    <string name="delete_albums_message">Are you sure you want to delete the all selected albums?</string>
    <string name="delete_photo_message">Are you sure you want to delete this media?</string>
    <string name="delete_photos_message">Are you sure you want to delete all the selected media?</string>
    <string name="hide_albums_message">Are you sure you want to hide the selected albums?</string>
    <string name="unhide_album_message">Un-hiding this album you will also make the media available for other apps.</string>
    <string name="new_folder_message">The new folder will be created in the current path, and
        then the media will be copied or moved in the new folder.
    </string>
    <string name="card_style_alert">NOTE: Restart the app for make changes.</string>
    <string name="show_album_path">Show album path</string>
    <string name="show_preview_image_name">Show preview image name</string>
    <string name="show_media_count">Show media count</string>
    <string name="changelog">Changelog</string>
    <string name="album_path">Album Path</string>
    <string name="singular_photo">Photo</string>
    <string name="plural_photos">Photos</string>
    <string name="video_player">Video Player</string>
    <string name="media">Media</string>
    <string name="send_to">Send to</string>
    <string name="search_menu">search</string>
    <string name="full_resolution">Full resolution</string>
    <string name="palette">Palette</string>
    <string name="colors">Colors</string>
    <string name="color">Color</string>
    <string name="copy_clipboard">Copyed to clipboard.</string>
    <string name="affix">Affix</string>
    <string name="affix_vertical">Affix Vertical</string>
    <string name="affix_vertical_sub">Set the orientation, horizontal by default.</string>
    <string name="affix_save_here">Save in this album</string>
    <string name="affix_save_here_sub">The result will be saved in this album</string>
    <string name="affix_format">Image format</string>
    <string name="affix_format_sub">Available formats</string>
    <string name="affix_text">Affixing your media, please wait&#8230;</string>
    <string name="affix_error">Can\'t affix video, you must select at least 2 images.</string>
    <string name="quality">Quality</string>
    <string name="album">Album</string>
    <string name="done">Done!</string>
    <string name="there_is_nothing_to_show">There\'s nothing to show!</string>
    <string name="insert_a_name">Insert something</string>
    <string name="nothing_changed">Nothing changed!</string>
    <string name="install_shortcut">Install shortcut</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="general_setting">General Setting</string>
    <string name="folder">Folder</string>
    <string name="folders">Folders</string>
    <string name="go_to_parent">Go to parent</string>
    <string name="color_palette">Color Palette</string>
    <string name="app_intro_skip">Introduction Skipped!</string>
    <string name="security">Security</string>
    <string name="active_security">Access by password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="type_password">Insert password</string>
    <string name="security_sub">Set up a password to protect your media.</string>
    <string name="remember_password_message">Note: password changed, if you forget it you will have to clear application data.</string>
    <string name="apply_password_on">Use password for</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="clear_password">Clear Password</string>
    <string name="error_password_length">The minimum password length is 4 character</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="auto_update_media">Auto update media</string>
    <string name="auto_update_media_sub">You should disable if there are a large number of images.</string>
    <string name="traslucent_statusbar">Translucent Status Bar</string>
    <string name="traslucent_statusbar_sub">Apply a darker primary color to the notification bar.</string>
    <string name="option_show_tips">Show Tips</string>
    <string name="option_show_tips_sub">It help you to understand the use of some feature.</string>
    <string name="media_viewer">Media Viewer</string>
    <string name="media_viewer_theme">Media Viewer Theme</string>
    <string name="custom_3thAct">Media Viewer</string>
    <string name="custom_3thAct_sub">Customize theme transparency on media viewer.</string>
    <string name="album_card_view">Album Card View</string>
    <string name="album_card_view_sub">Change the album card view style</string>
    <string name="card_type_material">Material Card</string>
    <string name="card_type_flat">Flat Card</string>
    <string name="card_type_compact">Compact Card</string>
    <string name="max_brightness">High Brightness</string>
    <string name="about">About</string>
    <string name="mode_grid">Grid</string>
    <string name="mode_list">List</string>
    <string name="album_details">Details</string>
    <string name="delete">Delete</string>
    <string name="media_column">Media Grid Columns</string>
    <string name="album_column">Album Grid Columns</string>
</resources>