<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/general_album_items">
        <item
            android:id="@+id/action_sort"
            android:orderInCategory="100"
            android:icon="@drawable/ic_sort_white"
            android:title="Sort"
            app:showAsAction="ifRoom" >

            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/name_sort_mode"
                        android:title="@string/name"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/date_taken_sort_mode"
                        android:checked="true"
                        android:title="@string/date"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/size_sort_mode"
                        android:title="@string/size"
                        app:showAsAction="never" />
                </group>
                <group android:checkableBehavior="all">
                    <item
                        android:id="@+id/ascending_sort_order"
                        android:title="@string/ascending"
                        app:showAsAction="never" />
                </group>
            </menu>
        </item>

        <item
            android:id="@+id/action_camera"
            android:icon="@drawable/ic_photo_camera_white_24dp"
            android:title="Camera"
            app:showAsAction="never">
        </item>

        <item
            android:id="@+id/filter_data"
            android:title="@string/filter_data"
            app:showAsAction="never">
        </item>

        <item
            android:id="@+id/view_mode"
            android:title="@string/view_mode"
            app:showAsAction="never">

            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/mode_grid"
                        android:title="@string/mode_grid"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/mode_list"
                        android:title="@string/mode_list"
                        app:showAsAction="never" />
                </group>
            </menu>
        </item>

        <item
            android:id="@+id/change_column"
            android:title="@string/change_column"
            app:showAsAction="never">

            <menu>
                <item
                    android:id="@+id/increase_column_count"
                    android:title="@string/increase_column_count"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/reduce_column_count"
                    android:title="@string/reduce_column_count"
                    app:showAsAction="never" />
            </menu>
        </item>

        <!--<item-->
            <!--android:id="@+id/setting"-->
            <!--android:title="@string/settings"-->
            <!--app:showAsAction="never">-->
        <!--</item>-->

        <!--<item-->
            <!--android:id="@+id/about"-->
            <!--android:title="@string/about"-->
            <!--app:showAsAction="never">-->
        <!--</item>-->
    </group>

    <group android:id="@+id/edit_mode_items">
        <item
            android:id="@+id/delete"
            android:title="@string/delete"
            app:showAsAction="ifRoom" />
    </group>
    <group android:id="@+id/one_selected_items">
        <!--<item-->
            <!--android:id="@+id/rename"-->
            <!--android:title="@string/rename"-->
            <!--app:showAsAction="never" />-->
    </group>


</menu>