<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/nav_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/nav_settings"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@mipmap/nav_heart"
            android:title="@string/nav_rate" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@mipmap/nav_information"
            android:title="@string/nav_about_us" />
    </group>

</menu>