<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/fifteen_dp"
    android:paddingLeft="@dimen/fifteen_dp"
    android:paddingRight="@dimen/fifteen_dp"
    android:paddingBottom="@dimen/five_dp"
    android:orientation="vertical">

    <com.tunm.gallerypro.theme.ui.TitleTextView
        android:id="@+id/title_dialog_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five_dp"
        android:layout_marginStart="@dimen/seven_dp"
        android:layout_marginBottom="@dimen/ten_dp"
        android:textColor="@color/accent_black"
        android:textSize="@dimen/twenty_sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        android:text="@string/sort_by"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/five_dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rgSortingMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/seven_dp"
            android:background="@color/colorHighlight"/>

        <RadioGroup
            android:id="@+id/rgSortingOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <com.tunm.gallerypro.theme.ui.ButtonTheme
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/cancel"/>

        <com.tunm.gallerypro.theme.ui.ButtonTheme
            android:id="@+id/sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/ok_action"/>
    </LinearLayout>
</LinearLayout>